--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "April 25, 2020" "ugrep 2.0.5" "User Commands"
+.TH UGREP "1" "April 27, 2020" "ugrep 2.0.6" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -245,8 +245,8 @@ results from different files.
 Print a help message.
 .TP
 \fB\-\-hexdump\fR=[1\-8][b][c][h]
-Output matches in 1 to 8 columns of 8 hexadecimal bytes.  The
-default is 2 columns or 16 bytes per line.  Option `b' removes all
+Output matches in 1 to 8 columns of 8 hexadecimal octets.  The
+default is 2 columns or 16 octets per line.  Option `b' removes all
 space breaks, `c' hides the character column, and `h' removes the
 hex spacing only.  Enables \fB\-X\fR if \fB\-W\fR or \fB\-X\fR is not specified.
 .TP
