--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -504,7 +504,7 @@ Search only files associated with TYPES, a comma\-separated list of
 file types.  Each file type corresponds to a set of filename
 extensions passed to option \fB\-O\fR.  For capitalized file types, the
 search is expanded to include files with matching file signature
-magic bytes, as if passed to option \fB\-M\fR.  When a type is preceeded
+magic bytes, as if passed to option \fB\-M\fR.  When a type is preceded
 by a `!' or a `^', excludes files of the specified type.  This
 option may be repeated.  The possible file types can be (where
 \fB\-t\fRlist displays a detailed list):
@@ -847,7 +847,7 @@ When present, the argument must be placed in \fB[]\fR brackets, for example
 the output.
 .PP
 The separator used by \fB%P\fR, \fB%H\fR, \fB%N\fR, \fB%K\fR, \fB%B\fR, and
-\fB%S\fR may be changed by preceeding the field by \fB%[\fR\fISEP\fR\fB]$\fR.
+\fB%S\fR may be changed by preceding the field by \fB%[\fR\fISEP\fR\fB]$\fR.
 When \fB[\fR\fISEP\fR\fB]\fR is not provided, this reverses the separator to
 the default separator or the separator specified with \fB--separator\fR.
 .PP
