--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -588,8 +588,8 @@ See also options \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR.  Disables multi\-line matc
 \fB\-Z\fR[\fIMAX\fR], \fB\-\-fuzzy[\fR=\fIMAX\fR]
 Fuzzy mode: report approximate pattern matches within MAX errors.
 By default, MAX is 1 and one deletion, insertion or substitution is
-allowed.  When `+' and/or `\fB\-'\fR preceed MAX, only insertions and/or
-deletions are allowed.  When `~' preceeds MAX, substitution counts
+allowed.  When `+' and/or `\fB\-'\fR precede MAX, only insertions and/or
+deletions are allowed.  When `~' precedes MAX, substitution counts
 as one error.  For example, \fB\-Z\fR+~3 allows up to three insertions or
 substitutions, but no deletions.  The first character of an
 approximate match always matches the begin of a pattern.  Option
